# ai-agent-eval-testing

./: .dockerignore  .env-template  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  VA Test Queries.xlsx  VA_Test_Queries_QS.xlsx  deploy-azure.sh  load_golden_dataset.py  load_va_queries.py  push_to_github.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent_eval/: __init__.py  run.py
agent_eval/evaluators/: rag_evaluators.py  safety_evaluators.py
agent_eval/reports/: html_report.py
agent_eval/utils/: agent_client.py  prompt_loader.py
data/: load_evals.py  test_prompts.json  test_prompts_sample.json
tests/: test_agent_client.py  test_html_report.py  test_prompt_loader.py
web/: README.md  __init__.py  app.py
